Extract sorting to its own command